<resources>
    <string name="app_name">Gestão de Gastos Pessoais</string>
    <string name="action_settings">Configurações</string>

    <string name="editData">Data</string>
    <string name="editDescricao">Descrição do valor</string>
    <string name="editValor">Valor</string>
    <string name="radioRenda">Renda</string>
    <string name="radioDespesa">Despesa</string>
    <string name="buttonIncluir">Incluir</string>
    <string name="textSaldoDescricao">Saldo atual</string>
    <string name="textSaldo">0.00</string>
    <string name="textEntradaDescricao">Entrada</string>
    <string name="textSaidaDescricao">Saida</string>

    <string name="msgExclusao">Exclusão</string>
    <string name="msgExclusaoConfirma">Deseja excluir?</string>

    <string name="msgSim">Sim</string>
    <string name="msgNao">Não</string>
    <string name="msgExclusao">Exclusão</string>
    <string name="msgExclusaoConfirma">Deseja excluir?</string>
    <string name="msgNao">Não</string>
    <string name="msgSim">Sim</string>
</resources>
