<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textSaldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/textSaldo"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textSaldoDescricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textSaldoDescricao"
        app:layout_constraintEnd_toEndOf="@+id/textSaldo"
        app:layout_constraintStart_toStartOf="@+id/textSaldo"
        app:layout_constraintTop_toBottomOf="@+id/textSaldo" />

    <TextView
        android:id="@+id/textEntrada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/textSaldo"
        android:textColor="@color/colorEntrada"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/textSaldoDescricao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSaldoDescricao" />

    <TextView
        android:id="@+id/textSaida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/textSaldo"
        android:textColor="@color/colorSaida"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textSaldoDescricao"
        app:layout_constraintTop_toBottomOf="@+id/textSaldoDescricao" />

    <TextView
        android:id="@+id/textEntradaDescricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textEntradaDescricao"
        app:layout_constraintEnd_toEndOf="@+id/textEntrada"
        app:layout_constraintStart_toStartOf="@+id/textEntrada"
        app:layout_constraintTop_toBottomOf="@+id/textEntrada" />

    <TextView
        android:id="@+id/textSaidaDescricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textSaidaDescricao"
        app:layout_constraintEnd_toEndOf="@+id/textSaida"
        app:layout_constraintStart_toStartOf="@+id/textSaida"
        app:layout_constraintTop_toBottomOf="@+id/textSaida" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="395dp"
        android:layout_height="343dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEntradaDescricao" />
</androidx.constraintlayout.widget.ConstraintLayout>